# Kisalaskuri

./: .travis.yml  Cargo.toml  LICENSE  README.md
benches/: kilac.rs
doc/: parser.md  protocol.md  syntax.md
src/: lib.rs  main.rs
src/calc/: ctx.rs  kilac.rs  lexer.rs  lisp.rs  mod.rs  parser.rs
src/calc/parser/: applicators.rs  mod.rs
src/kipac/: mod.rs
