[package]
name = "kilac"
version = "0.1.0"
authors = ["Leo Lahti <leo.lahti1@gmail.com>"]
documentation = "https://docs.rs/kilac"
repository = "https://github.com/TileHalo/Kisalaskuri"
readme = "README.md"
license-file = "LICENSE"
description = "Handles Kipa-compatible inputs"

[lib]
name = "kilac"
path = "src/lib.rs"
