[package]
name = "kilac"
version = "0.2.1"
authors = ["Leo Lahti <leo.lahti1@gmail.com>"]
documentation = "https://docs.rs/kilac"
readme = "README.md"
license-file = "LICENSE"
description = "ARCHIVED PROJECT"

[lib]
name = "kilac"
path = "src/lib.rs"

[[bench]]
name = "kilac"
harness = false

[dev-dependencies]
pretty_assertions = "0.5.0"
criterion = "0.2.0"
